--- a/assets/locales/zh-CN.json
+++ b/assets/locales/zh-CN.json
@@ -7,7 +7,14 @@
   },
   "home": {
     "名字": "王弘",
-    "欢迎词": "嗨, 我是王弘",
-    "介绍": "我写了很多例子，点击头部查看"
+    "欢迎词": "嗨, 我是王弘。",
+    "介绍": "我喜欢Nuxt3，它的发展是可以无限扩展，并且支持全栈开发，在服务端我已经成功的使用了Mysql、Redis数据库，以及Socket连接，它很棒。",
+    "创建了~": "创建了 ",
+    "~等": " 等。",
+    "热情所在": "9年的编码经验，我仍在探索和学习，因为我喜欢写代码。你可以在这里找到我的完整项目列表",
+    "兴趣爱好": "编程之余，我喜欢摄影、健身和旅行。如果你碰巧在我住的同一个城市（目前在成都），也许我们可以一起出去拍照、健身或写代码。",
+    "语言": "语言",
+    "中文": "🇨🇳 中文 (母语)",
+    "英语": "🇬🇧 英语 (会话)"
   }
 }
