--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -3,7 +3,8 @@
     "title": "Hom Wang"
   },
   "header": {
-    "在线聊天": "Chat online"
+    "在线聊天": "Chat online",
+    "阅读王弘更多的信息": "阅读王弘更多的信息"
   },
   "home": {
     "名字": "Hom Wang",
