--- a/assets/locales/zh-CN.json
+++ b/assets/locales/zh-CN.json
@@ -3,7 +3,8 @@
     "title": "王弘"
   },
   "header": {
-    "在线聊天": "在线聊天"
+    "在线聊天": "在线聊天",
+    "阅读王弘更多的信息": "Read more about Hom Wang"
   },
   "home": {
     "名字": "王弘",
