--- a/assets/locales/zh-CN.json
+++ b/assets/locales/zh-CN.json
@@ -3,8 +3,14 @@
     "title": "王弘"
   },
   "header": {
-    "在线聊天": "在线聊天",
-    "阅读王弘更多的信息": "Read more about Hom Wang"
+    "在线聊天": "聊天",
+    "阅读王弘更多的信息": "阅读王弘更多的信息",
+    "状态": "状态",
+    "已连接": "已连接",
+    "连接失败": "连接失败",
+    "消息列表": "消息列表",
+    "暂无数据": "暂无数据",
+    "发送": "发送"
   },
   "home": {
     "名字": "王弘",
