--- a/assets/locales/zh-CN.json
+++ b/assets/locales/zh-CN.json
@@ -10,7 +10,8 @@
     "连接失败": "连接失败",
     "消息列表": "消息列表",
     "暂无数据": "暂无数据",
-    "发送": "发送"
+    "发送": "发送",
+    "发送信息不能为空": "发送信息不能为空"
   },
   "home": {
     "名字": "王弘",
